--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -4,7 +4,9 @@ on: workflow_dispatch
 
 jobs:
   build:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
+    strategy:
+      python-version: ["3.10.0"]
     steps:
       -uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
