--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -6,7 +6,7 @@ jobs:
   unit-test:
     runs-on: ubuntu-latest
     strategy:
-      python-version: "3.10.0"
+      python-version: 3.10.0
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ python-version }}
