--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -5,14 +5,12 @@ on: [workflow_dispatch]
 jobs:
   unit-test:
     runs-on: ubuntu-latest
-    strategy:
-      python-version: 3.10.0
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ python-version }}
+        python-version: 3.10.0
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
