--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -14,8 +14,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -y pytest
-        pip install -y requirements.txt
+        pip install pytest
+        pip install requirements.txt
     - name: Unit test with pytest
       run: |
         python -m pytest tests/units
