--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -15,7 +15,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest
-        pip install requirements.txt
+        pip install -r requirements.txt
     - name: Unit test with pytest
       run: |
         python -m pytest tests/units
